# BDCSC

./: .gitignore  README.md  ci-script-formatting.sh  mkdocs.yml  pyocd.yaml  scope.json
.devcontainer/ecad-mcad/: Dockerfile  devcontainer.json
.devcontainer/puya/: .bashrc_devcontainer_addons  Dockerfile  devcontainer.json
hardware/: ci-script-kibot.sh
hardware/BDCSC/: BDCSC.kicad_pro
hardware/resources/: HLE-108-02-L-DV-BE-TR.stp
hardware/src/: .gitignore  BDCSC.kicad_pcb  BDCSC.kicad_pcb-bak  BDCSC.kicad_prl  BDCSC.kicad_pro  BDCSC.kicad_sch  BDCSC.xml  fp-info-cache  fp-lib-table  ~BDCSC.kicad_pcb.lck
mechanical/: motor_holder.FCStd
software/: CMakeLists.txt  memory_map.ld  rtt_viewer.py
software/app/: CMakeLists.txt
software/app/inc/: bdcsc.h  peripherals.h  platform.h  py32f0xx_hal_conf.h  py32f0xx_it.h
software/app/src/: bdcsc.c  default_config.c  main.c  peripherals.c  py32f0xx_hal_msp.c  py32f0xx_it.c
software/btl/src/: bootloader.c  py32f0xx_it.c
software/lib/: CMakeLists.txt
software/lib/config/: config.c
software/lib/config/inc/: config.h
software/lib/debug_io/: debug_io_rtt.c
software/lib/debug_io/inc/: SEGGER_RTT_Conf.h  debug_io.h
software/lib/flash/: CMakeLists.txt
software/lib/pid/: pid.c
software/lib/pid/inc/: pid.h
software/lib/puya_libs/LDScripts/: PY32F003x6.ld
software/lib/puya_libs/PY32F0xx_HAL_Driver/Inc/: py32f0xx_hal_comp.h
software/lib/rbuff/: CMakeLists.txt  rbuff.c
software/lib/rbuff/inc/: rbuff.h
software/lib/rbuff/test/: CMakeLists.txt  test.c
